--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -205,6 +205,10 @@ service vendor.cdsprpcd /vendor/bin/cdsprpcd
 #    chown system drmrpc /sys/devices/f9966000.i2c/i2c-1/1-0020/secure_touch_enable
 #    chown system drmrpc /sys/devices/f9966000.i2c/i2c-1/1-0020/secure_touch
 
+    # Restrict permissions to socket file 
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
+    
 service vendor.pd_mapper /system/vendor/bin/pd-mapper
      class core
 
